[gd_scene load_steps=54 format=3 uid="uid://b7kjna67lvmsi"]

[ext_resource type="Shader" uid="uid://kdy28usr0fjq" path="res://scenes/enemy.gdshader" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://f1er0hiwcilr" path="res://assets/knight.png" id="2_4ra3w"]
[ext_resource type="Script" uid="uid://dcyijruev76a2" path="res://scripts/enemy/enemy.gd" id="2_5uy6h"]
[ext_resource type="Script" uid="uid://bnqqaihcogubs" path="res://scripts/enemy/enemy_state_machine.gd" id="4_5uy6h"]
[ext_resource type="Script" uid="uid://yntcg2qcocm1" path="res://scripts/enemy/states/pursuing_state.gd" id="5_c4w8v"]
[ext_resource type="Script" uid="uid://pndw2tbjcfyv" path="res://scripts/enemy/states/idle_state.gd" id="6_nenq2"]
[ext_resource type="Script" uid="uid://dmpuxvyfjdqiq" path="res://scripts/enemy/states/attacking_state.gd" id="6_xwavj"]
[ext_resource type="Script" uid="uid://bx574v0nnhnnq" path="res://scripts/enemy/enemy_weapon_controller.gd" id="8_ipns3"]
[ext_resource type="PackedScene" uid="uid://g6mgh6eel2wb" path="res://scenes/spear.tscn" id="8_md484"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_md0e3"]
shader = ExtResource("1_md0e3")
shader_parameter/Shift_Hue = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5uy6h"]
shader = ExtResource("1_md0e3")
shader_parameter/Shift_Hue = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("2_4ra3w")
region = Rect2(240, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_4ra3w")
region = Rect2(256, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_4ra3w")
region = Rect2(272, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_4ra3w")
region = Rect2(288, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_4ra3w")
region = Rect2(304, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_4ra3w")
region = Rect2(320, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_4ra3w")
region = Rect2(336, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("2_4ra3w")
region = Rect2(352, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("2_4ra3w")
region = Rect2(368, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("2_4ra3w")
region = Rect2(384, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("2_4ra3w")
region = Rect2(400, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("2_4ra3w")
region = Rect2(416, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_4ra3w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_4ra3w")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_4ra3w")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_4ra3w")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_4ra3w")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_4ra3w")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_4ra3w")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_4ra3w")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_4ra3w")
region = Rect2(432, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_4ra3w")
region = Rect2(448, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_4ra3w")
region = Rect2(464, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_4ra3w")
region = Rect2(480, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_4ra3w")
region = Rect2(496, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_4ra3w")
region = Rect2(512, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("2_4ra3w")
region = Rect2(528, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("2_4ra3w")
region = Rect2(544, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("2_4ra3w")
region = Rect2(560, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_4ra3w")
region = Rect2(576, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_4ra3w")
region = Rect2(592, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_4ra3w")
region = Rect2(608, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_4ra3w")
region = Rect2(624, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_4ra3w")
region = Rect2(640, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_4ra3w")
region = Rect2(656, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_4ra3w")
region = Rect2(672, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_4ra3w")
region = Rect2(688, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_4ra3w")
region = Rect2(704, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4w8v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}],
"loop": true,
"name": &"Idle_Back",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}],
"loop": true,
"name": &"Jumping",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"Running",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"Running_Back",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": true,
"name": &"Walking",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"Walking_Back",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(8, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_nenq2"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_md484"]
radius = 50.0

[node name="Enemy" type="Area2D"]
material = SubResource("ShaderMaterial_md0e3")
script = ExtResource("2_5uy6h")

[node name="Character" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_5uy6h")
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_c4w8v")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_md0e3")

[node name="ai_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_5uy6h")
starting_state = NodePath("idle")

[node name="pursuing" type="Node" parent="ai_state_machine" node_paths=PackedStringArray("attacking_state", "idle_state")]
script = ExtResource("5_c4w8v")
attacking_state = NodePath("../attacking")
idle_state = NodePath("../idle")
animation_name = "pursuing"

[node name="idle" type="Node" parent="ai_state_machine" node_paths=PackedStringArray("pursuing_state")]
script = ExtResource("6_nenq2")
pursuing_state = NodePath("../pursuing")
animation_name = "pursuing"

[node name="attacking" type="Node" parent="ai_state_machine" node_paths=PackedStringArray("pursuing_state")]
script = ExtResource("6_xwavj")
pursuing_state = NodePath("../pursuing")

[node name="weapon_controller" type="Node" parent="."]
script = ExtResource("8_ipns3")
metadata/_custom_type_script = "uid://dmuirgibia57n"

[node name="weapon_anchor" type="Node2D" parent="."]

[node name="Spear" parent="weapon_anchor" node_paths=PackedStringArray("weapon_controller") instance=ExtResource("8_md484")]
position = Vector2(4, 0)
weapon_controller = NodePath("../../weapon_controller")
damage = 0.0

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackAreaShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_nenq2")

[node name="SightArea" type="Area2D" parent="."]

[node name="SightAreaShape" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_md484")

[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_exited"]
[connection signal="area_entered" from="SightArea" to="." method="_on_sight_area_entered"]
[connection signal="area_exited" from="SightArea" to="." method="_on_sight_area_exited"]
